    and are right-aligned.
  o Margins and padding were updated.
  o t-test was added for comparison of total scores between groups
    into DIF section and into reports.
  o Histograms for total scores are now displayed in plotly mode.

MINOR UPDATES
  o Some math mode was fixed in IRT section.
  o Some typos were fixed.
  o Selected R code was updated in DIF/Total scores.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.9-2. (2019-01-11) -
-------------------------------------------------------

BUG FIXING
  o Generalized ULI index is now correctly displayed in traditional
    item analysis table in reports.
  o Item names are now correctly displayed in reports.
  o Item names are now correctly displayed in DDF section.
  o Function plotDIFLogistic() now handles user-specified matching
    criterion.

MINOR UPDATES
  o Legend of DDplot was modified.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.9-1. (2018-12-10) -
-------------------------------------------------------

MINOR UPDATES
  o Wording in PDF/HTML reports was edited.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.9. (2018-12-06) -
-------------------------------------------------------

BUG FIXING
  o IRT/Training/Dichotomous models - plots are correctly plotted.
  o Download buttons in IRT/4PL works now.

MAJOR UPDATES
  o TIF were converted into plotly.
  o Section Validity/FA is not accessible for now.

MINOR UPDATES
  o Selected R code for IRT/Bock's model was updated.
  o Wording in IRT models was updated.
  o Wording in Reports was updated.
  o Legend for plots of IRT models was modified in Reports.
  o Ability estimates summary table is now round in Reports.
  o Some typos were fixed in Reports.
  o Colours of IRT summary plots correspond to model for Items.


-------------------------------------------------------